--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -32,7 +32,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748174.md#1" target="_blank">中共山东舰经台海 美国务院吁停止胁迫台湾</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11748174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/GettyImages-959767396-150x120.jpg" align ="left"></a>中共首艘自制航空母舰12月26日航经台湾海峡。对此，中华民国国防部表示，国军全程监侦国人可放心。美国国务院27日敦促中共，不要从事任何会危害台湾安全、社经体系及人民的“胁迫行径”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 12:34 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747512.md#1" target="_blank">范冰冰到日本过圣诞 三四千港币购物直呼太贵</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747512.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/04/1612161004052669-150x120.jpg" align ="left"></a>经历逃税风波后复出的大陆女星范冰冰，12月25日在工作室微博贴出一则在日本过圣诞的短片。片中，她走在日本街头，显得心情大好。当走到一间法国水晶品牌的店铺时，她对该店的标价大约两千元（港币，下同）的圣诞树摆设爱不释手。不过，她在犹豫片刻后直呼“太贵”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank">“你的密码归党管” 中共密码法明年上路</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/25/n11744047.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-24-password-Cover02-150x120.jpg" align ="left"></a>从明年1月1日开始，中共政府就将开始实施“密码法”，规定所有网络密码由国家统一管理。按照中共国家密码管理局的说法，要坚决贯彻“党管密码”的根本原则，违反者可能背负刑事责任，而民事罚款最高可达100万人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 6:41 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank">分析：美中贸易战 明年进入三个关键期</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/26/n11747582.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1180493925-1-600x400-1-150x120.jpg" align ="left"></a>2020年是观察美中贸易关系更重要的一年，专家说，兑现承诺比谈判更为困难，明年进入三个关键期。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 5:55 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751864.md#1" target="_blank">内蒙古公安警官枪杀两副局长 当局封口</a><br></h3>圣诞节当日，大陆内蒙古一森林公安局的警官突然枪击5名同事，致其中两名副局长身亡。中共公安部和内蒙古当局派人进驻当地调查，并全面封锁消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:25 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11750592.md#1" target="_blank">【翻墙必看】中共到了最后解体的时刻？</a><br></h3>不久前，美国国际宗教自由委员会委员鲍尔说：“我们收到中共政府内乱和中国一些地区反对中共政权的报告。”鲍尔认为，中共的解体可能以非常快的速度发生。那么，中共真的到了最后解体的时刻吗？答案是肯定的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751269.md#1" target="_blank">贪污逾千万元 内蒙古通辽政协高官获刑17年</a><br></h3>12月28日，中共内蒙古通辽市政协前副主席吴国林（副厅级）被判刑17年。其被指贪污逾千万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月28日 6:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11749335.md#1" target="_blank">大庆油罐车爆炸致4死 官方14天未通报</a><br></h3>黑龙江大庆一个县油罐车发生爆炸，事故发生14天后官方仍未通报。爆炸造成4人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 8:24 PM							</td></tr>
