--- a/gb/ncid282_3.md
+++ b/gb/ncid282_3.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="http://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="http://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>社会万象</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ublry267/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank">马思纯零台词诠释抑郁症 网友赞：眼神都是戏</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11741299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ma-sichun-150x120.jpg" align ="left"></a>与周冬雨一起夺得金马双影后的大陆女星马思纯，近日在一短片中零台词诠释忧郁症。在一分多钟的时间里，她展现了一个人从绝望到释然的全过程。网友纷纷夸赞：“眼神里都是戏！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 6:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740739.md#1" target="_blank">港教区吁政府聆听民意 成立独立调查委员会</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3f44a79b591ec121cc2f5971699cbd48-150x120.png" align ="left"></a>香港在反送中运动中迎来了首个圣诞节，警方已开始在此前频发冲突的区域街头加强警力。天主教香港教区宗座署理汤汉枢机在圣诞贺辞中，呼吁政府聆听民意，尽快成立“独立调查委员会”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740707.md#1" target="_blank">【十字路口】川普弹劾案5大疑点 北京为何低调</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11740707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e307cee4c47810_ttl7day2Rs_20191223-____-DJY2-150x120.jpg" align ="left"></a>大家知道，美国国会众议院在民主党的主导下，在12月18日通过了两项对川普的弹劾条款，包括“滥用职权”和“妨碍国会调查”，让川普成为美国史上第三位被弹劾的美国总统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 11:19 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738768.md#1" target="_blank">中共介入台立委选举 助统促党候选人贿选</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ca7167ad5785acfc538ca12b7c2b93ef-150x120.jpg" align ="left"></a>调查局台北市调查处接获民众检举，统促党不分区立委候选人何建华，招待17名陆配于12月18日至22日赴中国厦门旅游，且旅游相关费用皆由中共官员落地招待，涉嫌违反《选罢法》；调查局22日会同台北市警局中正一分局，于机场查获返台的陆配，并约谈何建华到案侦讯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 5:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank">云南恶霸孙小果案重审 再判死刑</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/23/n11739498.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>2019年12月23日，云南恶霸孙小果，因1997年犯强奸罪等罪的再审案件公开宣判，孙小果再被判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 12:41 PM							</td></tr>
@@ -19,7 +21,6 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735446.md#1" target="_blank">副总统政见发表会 赖清德：助中国民主化</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735446.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/f00d04241153ca652cca18deff1fe6ce-150x120.jpg" align ="left"></a>2020副总统电视政见发表会20日登场，国民党候选人张善政表示，他跟国民党总统候选人韩国瑜提出“十大数位行动计划”，跟过去十大建设前后呼应，包括成立直属行政院的数位创新委员会，布建普及先进的数位基础政策，全面推广数位教育，并结合社会科技，发展数位文化，及发展智慧城乡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 11:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735084.md#1" target="_blank">衢州定婚丧礼金不得超300元 网民：管太宽</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735084.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/01/shutterstock_399512464-e1517330465968-150x120.jpg" align ="left"></a>近日，中共浙江省衢州市政府制定《衢州市婚丧喜庆事宜操办标准》，要求结婚彩礼总数要控制在10万元以内，婚事礼金在300元以内，丧事200元以内。对此，网民纷纷表示管得太宽。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 6:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733249.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1KI7GJ-150x120.jpg" align ="left"></a>在众议院投票通过指控川普（特朗普）总统“滥用权力”和“阻碍国会”弹劾条款的翌日，德克萨斯州共和党参议员特德·克鲁兹（Ted Cruz）向媒体表示，民主党人目前感到很焦虑，因为他们发起的弹劾案已经崩溃。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 2:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11732846.md#1" target="_blank">中共严重介选 叶望辉：台人有守护民主的韧性</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11732846.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/53efdf5ed9111b0206585c10a2cc0ba5-150x120.jpg" align ="left"></a>曾任白宫国安顾问的叶望辉，带着美国媒体观察团，周四（12月19日）与台湾媒体进行座谈会。叶望辉表示，这半年香港情势应证了，北京不在乎和平、只重控制。他说，中共严重介入台湾选举，更让世界看到了台湾人热爱民主的韧性。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 1:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738955.md#1" target="_blank">前华为工程师失去加国枫叶卡 面临遣返</a><br></h3>前中国电信巨头华为工程师张国东（Guodong Zhang，音译）从大陆移民加拿大后，因长期居住海外丢掉永久居民身份，面临被遣返回中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738135.md#1" target="_blank">久坐玩手机每天吃汉堡 扬州男童患重度脂肪肝</a><br></h3>近日，江苏扬州9岁男童优优（化名）因肺炎就医。医生注意到，优优的体重竟有120斤，一检查，发现他还患上了重度脂肪肝。原来，优优爱玩手机，经常久坐不动，还每天吃汉堡喝饮料。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 2:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/22/n11738059.md#1" target="_blank">沪男子图好玩点燃杨絮 烧毁3770万财产</a><br></h3>今年5月，上海青浦39岁男子汪某出于好玩，用打火机点燃一堆白杨絮。白杨絮起火后引燃一旁的塑料废品等可燃物，火势蔓延到邻近的一家公司内，使该公司冷库着火烧毁。此次事故造成直接经济损失超3770万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月22日 1:24 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11735959.md#1" target="_blank">社交名媛张瀞仁猝逝 刘嘉玲安以轩发文悼念</a><br></h3>活跃于大陆社交圈的名媛张瀞仁，惊传12月20日凌晨在日本北海道猝逝。今年53岁的她，是“台聚集团”的少奶奶，经常出席各种时尚活动，与演艺圈许多明星关系匪浅，就连微博名“上海吴太”也是刘嘉玲帮取名。噩耗传来，刘嘉玲、安以轩等圈内好友纷纷发文悼念。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月21日 9:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/20/n11734452.md#1" target="_blank">每日三退声明精选（2019/12/19）</a><br></h3>本人刘清甄，在职高校教师。起初我为了教书育人进入大学传道授业，但在学校中被迫给杀人无数的匪共做宣传，逐渐看清了匪共的本质。今年六月以来，我实在受不了被上级要求抹黑香港民主运动的指示，遂在此宣布退出加入过的少先队、共青团和共产党，与邪恶的匪共彻底划清界限。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11733750.md#1" target="_blank">陆男星拍戏以数字代台词 滑稽表演引热议</a><br></h3>近日，大陆网络流出的一段视频证实：近年大陆演艺圈的确出现了“数字先生”、“数字小姐”不背台词，拍戏时嘴巴念着12345，对白的情绪全交给专业配音演员去处理。这段视频显示，两位演员在对戏时，从头到尾以数字带过，画面非常爆笑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 9:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/19/n11731783.md#1" target="_blank">加拿大升级中国旅行警告：慎防中共随意执法</a><br></h3>12月18日，加拿大政府提升了去中国旅行的风险警告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 12:31 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/ncid282_3.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/ncid282_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/ncid282_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_3.htm">http://www.epochtimes.com/gb/ncid282_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
